<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_view_title"
        android:textColor="@color/dark_grey"
        android:padding="@dimen/standard_padding"
        android:gravity="center"
        android:textSize="@dimen/heading" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:contentDescription="The Eiffel tower"
        app:srcCompat="@drawable/eiffel"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_button_title"
        android:textColor="@color/dark_grey"
        android:padding="@dimen/standard_padding"
        android:gravity="center"
        android:textSize="@dimen/heading" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_button_description"
        app:srcCompat="@android:drawable/ic_menu_share" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_title"
        android:textColor="@color/dark_grey"
        android:padding="@dimen/standard_padding"
        android:gravity="center"
        android:textSize="@dimen/heading" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Apples"
        android:contentDescription="@string/first_checkbox"/>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Eggs"
        android:contentDescription="@string/second_checkbox"/>

</LinearLayout>